some touchup on intl

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -11,5 +11,7 @@
   "register" : "Registrieren",
   "registered" :"Erforlgreich Registriert",
   "biblio" : "Bibliothek",
-  "imprint" : "Impressum"
+  "imprint" : "Impressum",
+  "entry" : "Eintritt um",
+  "office" : "Büros"
 }
