minor name changes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "home_title": "TQW Covid Form",
+  "home_title": "TQW Contact Tracing",
   "telephone": "Telephone - Nr.",
   "firstName": "First Name",
   "lastName" : "Last Name",
